--- a/FirstSelection/css/queries.css
+++ b/FirstSelection/css/queries.css
@@ -1,67 +1,293 @@
+/* Desktop 2560px = 2560 / 16 = 160 */
+@media (max-width: 160em) {
+  html {
+    font-size: 95%;
+  }
+  .nav {
+    min-width: 105%;
+  }.nav.sticky {
+    min-width: 105%;
+  }
+}
+
+/* Desktop 1920px = 1920 / 16 = 120 */
+@media (max-width: 120em) {
+  html {
+    font-size: 80%;
+  }
+  .features {
+    margin: 0 6rem;
+  }
+  .nav {
+    min-width: 105%;
+  }.nav.sticky {
+    min-width: 105%;
+  }
+}
+
 /* Desktop 1440px = 1440 / 16 = 90 */
 @media (max-width: 90em) {
   html {
-    font-size: 62.5%;
+    font-size: 70%;
+  }
+  .features {
+    margin: 5rem;
+  }
+  .features-container {
+    margin: 4rem;
+  }
+  .nav {
+    min-width: 110%;
+  }.nav.sticky {
+    min-width: 110%;
   }
 }
-/* Laptop below 1365px = 1365 / 16 = 85.31 */
-@media (max-width: 85.31em) {
-  html {
-    font-size: 62.5%;
-  }
-}
+
 /* Landscape Tablet below 1180px =  1180 / 16 = 73.75 */
 @media (max-width: 73.75em) {
   html {
     font-size: 62.5%;
   }
+  .features {
+    margin: 0 3rem;
+  }
+  .features-container {
+    margin: 4rem;
+  }
+  h1 {
+    font-size: 4.5rem;
+  }
+  .header__title {
+    max-width: 95rem;
+  }
+  .nav {
+    min-width: 110%;
+  }.nav.sticky {
+    min-width: 110%;
+  }
+  .btn {
+    padding: 1rem 2.5rem;
+  }
 }
 /* Tablets below 944px = 944 / 16 = 59 */
 @media (max-width: 59em) {
   html {
-    font-size: 56.25%;
+    font-size: 55%;
+  }
+  .nav {
+    min-width: 110%;
+  }
+  .nav.sticky {
+    min-width: 110%;
+  }
+  .features {
+    margin: 0 1.5rem;
+  }
+  .header__title {
+    max-width: 95rem;
   }
 }
+
+/* Tablets below 800px = 800 / 16 = 50 */
+@media (max-width: 50em) {
+  html {
+    font-size: 50%;
+  }
+  /* Mobile Navigation */
+  .btn-mobile-nav {
+    display: block;
+    z-index: 1;
+  }
+
+  .nav__links {
+    background-color: rgba(233, 241, 250, 0.95);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 5rem;
+    transition: all .8s ease-in;
+    
+
+    /* Hide Element */
+    opacity: 0;
+
+    /* Unaccessible to mouse and keyboard */
+    pointer-events: none;
+
+    /* Hide from screen */
+    visibility: hidden;
+
+  }
+  .nav-open .nav__links {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  } 
+  .nav-open .fa-xmark {
+    display: block;
+  }
+  .nav-open .fa-bars {
+    display: none;
+  }
+  .nav__link:link, .nav__link:visited {
+    font-size: 3rem;
+  }
+  .header__title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 3rem;
+  }
+  .header__img {
+    width: 65%;
+  }
+  .btn--text {
+    margin-bottom: 6rem;
+    border-bottom :1px solid var(--color-primary);
+  }
+  h1 {
+    text-align: center;
+  }
+  .features {
+    margin: 1rem;
+    gap: 5rem;
+  }
+  .features-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows:minmax(auto);
+    margin: 2rem;
+  }
+  .features__feature {
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+  }
+  .features__feature:nth-child(6) {
+   order: 6;
+  }
+  .features__feature:nth-child(2) {
+    order: 2;
+  }
+  .features__feature:nth-child(3) {
+    order: 4;
+  }
+  .features__img:nth-child(1) {
+    order: 1;
+  }
+  .features__img:nth-child(4) {
+   order: 3;
+  }
+  .features__img:nth-child(5) {
+    order: 5;
+  }
+  .features__icon {
+    margin: 0 auto;
+  }
+  .btn {
+      padding: 1rem .5rem;
+    }
+
+}
+
 /* Below  600px = 600 / 16 = 37.5 */
 @media (max-width: 37.5em) {
   html {
     font-size: 50%;
   }
-  .nav {
-    padding: 0 1rem;
+  .header__title {
+    max-width: 90rem;
   }
+ 
   .features {
     margin: 0;
+    gap: 2rem;
   }
-  h1 {
-    font-size: 3.5rem;
-  }
-  .nav.sticky {
-    padding: 0 4.5rem;
+  .features-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 2rem;
   }
   .btn {
-    padding: 1rem 2.5rem;
+    padding: .75rem .25rem;
   }
-  .nav__logo {
-    height: 3.5rem;
+  .features__feature {
+    font-size: 1.75rem;
+    width: 100%;
+    text-align: center;
+    }
+    .features__icon {
+      margin: 0 auto;
+    }
+    .nav {
+      min-width: 115%;
+      padding: 0 8rem;
+    }
+    .nav-sticky {
+      min-width: 115%;
+    }
+  }
+
+/* Below 450px = 450 / 16 = 28.12 */
+@media (max-width: 28.12em) {
+  html {
+    font-size: 45%;
+  }
+  h1 {
+    font-size: 4.25rem; 
+  }
+  .section {
+    padding: 6rem 2rem;
+  }
+  .features-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 2rem;
+  }
+  .features__icon {
+    margin: 0 auto;
+  }
+  .btn {
+    padding: .5rem .25rem;
+  }
+  .features__feature {
+    font-size: 1.5rem;
+    width: 100%;
+    text-align: center;
+  }
+  .nav {
+    min-width: 115%;
+    padding: 0 7rem;
+  }
+  .nav-sticky {
+    min-width: 115%;
   }
 }
-/* Below 450px = 450 / 16 = 28.12 */
-@media (max-width: 28.1em) {
+
+/* Below 360px = 360 / 16 = 22.5 */
+@media (max-width: 22.5em) {
   html {
-    font-size: 43.75%;
+    font-size: 40%;
   }
-  h1 {
-    font-size: 3rem;
+  .section {
+    padding: 6rem 1rem;
   }
-  .nav__link:link,
-  .nav__link:visited {
-    font-size: 1.5rem;
+  .features-container {
+    margin: 0;
+  }
+  .features__icon {
+    margin: 0 auto;
   }
   .btn {
-    padding: 1rem 2rem;
-  }
-  .nav__logo {
-    height: 3rem;
+    padding: .75rem 1rem;
   }
 }
