--- a/FirstSelection/css/style.css
+++ b/FirstSelection/css/style.css
@@ -34,6 +34,14 @@ body {
   overflow-x: hidden;
 }
 
+a {
+  text-decoration: none;
+}
+
+header {
+  position: relative;
+}
+
 /* GENERAL ELEMENTS */
 .section {
   padding: 15rem 3rem;
@@ -207,7 +215,6 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
   
 }
 
